<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".View.fragment.LoginFragment">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:navigationIcon="@drawable/ic_white_simple"
      tools:ignore="MissingConstraints" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/conteudo_tela_login"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_login"
        android:hint="@string/email_hint"
        android:layout_marginBottom="230dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_70"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_login"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_70"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <TextView
        android:id="@+id/mensagem_erro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/skuirrel_dark_green"
        android:padding="15dp"
        android:text="@string/button_login"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mensagem_erro" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/need_help"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_entrar" />

    <TextView
        android:id="@+id/txt_cadastro_novo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <ProgressBar
      android:id="@+id/progress_bar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:indeterminateTint="@color/white"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="MissingConstraints" />

  </androidx.constraintlayout.widget.ConstraintLayout>