<resources>
    <string name="app_name">Skuirrel</string>
    <string name="title_home">Filmes</string>
    <string name="title_dashboard">Séries</string>
    <string name="title_notifications">Minha lista</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="button_login">ENTRAR</string>
    <string name="need_help">Precisa de ajuda?</string>
    <string name="register_text">Novo por aqui? Inscreva-se agora!</string>
    <string name="fill_fields_text">Preencha todos os campos!</string>
    <string name="login_successful_text">Login efetuado com sucesso!</string>
    <string name="wrong_pass_email_text">Email ou senha incorretos</string>
    <string name="no_connection_text">Sem conexão de rede</string>
    <string name="login_error_user_text">Erro ao logar usuário</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_button">CADASTRAR</string>
    <string name="create_account_text">Crie sua conta</string>
    <string name="email_pass_register_text">Informe seu email e senha \npara iniciar a assinatura</string>
    <string name="fill_all_fields_text">Preencha todos os campos para continuar</string>
    <string name="user_registered_text">Usuário cadastrado com sucesso!</string>
    <string name="password_min_character_text">A senha deve conter no mínimo 6 caracteres</string>
    <string name="account_already_registered_text">Esta conta já foi cadastrada</string>
    <string name="error_register_text">Erro ao cadastrar usuário</string>
    <string name="logout_text">Logout</string>
    <string name="latest_shows_movies">Últimos lançamentos</string>
    <string name="coming_soon">Em breve...</string>
    <string name="sugestions">Sugestões</string>
    <string name="score">Nota</string>
    <string name="year">Ano de lançamento</string>
    <string name="sinopsis">Sinopse</string>
    <string name="videos">Vídeos</string>
</resources>